--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "classnames": "^2.3.1",
-    "date-fns": "^2.29.2",
-    "framer-motion": "^8.5.2",
+    "axios": "0.27.2",
+    "classnames": "2.3.1",
+    "date-fns": "2.29.2",
+    "framer-motion": "8.5.2",
     "next": "12.2.5",
+    "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.42.1",
-    "react-yandex-metrika": "^2.6.0"
+    "react-hook-form": "7.42.1",
+    "react-yandex-metrika": "2.6.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.3.1",
@@ -31,11 +32,11 @@
     "eslint": "^8.23.0",
     "eslint-config-next": "12.2.5",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
     "stylelint": "^14.11.0",
     "stylelint-config-standard": "^28.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-order-config-standard": "^0.1.3",
-    "typescript": "^4.8.2",
-    "husky": "^8.0.3"
+    "typescript": "^4.8.2"
   }
 }
